<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_arrow_left"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/go_back"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/about"
                android:textColor="?attr/colorOnPrimary"
                android:fontFamily="@font/poppins_medium"
                android:textSize="18sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/about_health_application"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/use_of_resources"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/resources_info"
            android:textSize="11sp"/>

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/app_icon"
            android:contentDescription="@string/app_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/health_app_v1_0"
            android:textAlignment="center"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_aiims"
            android:textAlignment="center"
            android:textSize="11sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>