<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sign_in.SignInActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:src="@drawable/get_started_4"
            tools:ignore="ContentDescription"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="32dp"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/let_s_get_started"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/sign_in_with_your_account_or_create_a_new_one"
                android:textAlignment="center"
                android:textSize="13sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/buttonSignUp"
                android:layout_marginTop="48dp"
                android:background="@drawable/button_bg_solid"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/log_in"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg_outlined"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="?colorPrimary" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</layout>